--- a/1_Introduction.tex
+++ b/1_Introduction.tex
@@ -238,7 +238,7 @@
         
         In past experiments, the restoration of chiral symmetry was investigated using dileptons. In the SPS-NA60 experiment, the excess of muon pairs in the low-mass region was reported. However, the excess could also be explained by $\pi + \pi \rightarrow \rho \rightarrow \pi \pi$; thus, it did not serve as definitive evidence of chiral symmetry restoration\cite{NA60}.  
         
-        Additionally, in the electron pair measurements during ALICE Run 2 $\sqrt{s_{NN}} = 5.02$ TeV PbPb collisions, contributions from open-charm and open-beauty were estimated along with the vacuum dilepton distribution excluding $\rho$, and an excess of electron pairs was reported. The excess was explained as thermal dileptons from the QGP within the error range.demonstrated\cite{ALICE:2023jef}. 
+        Additionally, in the electron pair measurements during ALICE Run 2 $\sqrt{s_{NN}} = 5.02$ TeV PbPb collisions, contributions from open-charm and open-beauty were estimated along with the vacuum dilepton distribution excluding $\rho$, and an excess of electron pairs was reported. The excess was explained as thermal dileptons from the QGP within the error range demonstrated\cite{ALICE:2023jef}. 
     \subsection{Analysis of pp collision data as a baseline}
     This paper presents the analysis results of proton-proton collision events. The particles generated in proton-proton collisions are produced from the vacuum. Measurements of collision events where QGP is not produced serve as a baseline for comparison with events where QGP is generated. The quality of track reconstruction is still insufficient, and the muon pair analysis is also incomplete. Furthermore, the quality of muon tracks in heavy-ion collisions is more challenging than in proton-proton collisions due to the large number of particles generated in each event.  
 
