--- a/master_thesis.tex
+++ b/master_thesis.tex
@@ -70,7 +70,8 @@
 
     {\Large Author : Masahiro Oida} \\[10mm]
     {\Large Supervisor  : Prof. Kenta Shigaki} \\[5mm] % 指導教員名
-    {\Large Co-Examiner :} \\[5mm] % 指導教員名
+    {\Large Co-Examiner : Prof. Chiho Nonaka} \\[5mm] % 指導教員名
+    {\Large Co-Examiner : Prof. Masao Kuriki} \\[5mm] % 指導教員名
 
     {\large Hiroshima University \\
     Graduate School of Advanced Science and Engineering \\
