--- a/4_Results.tex
+++ b/4_Results.tex
@@ -26,7 +26,7 @@ This chapter presents the graphs of the $\omega$ and $\phi$ row yields calculate
     Here, it is necessary to consider the contribution of $\rho \rightarrow \mu\mu$. The $\rho$ meson has a mean mass of $m = 775.26$ MeV and a full width of $\Gamma = 149.1$ MeV, leading to a broader distribution than $\omega$, which is located at a very similar mass position. Given that the signal extraction method used in this analysis accounts for the broad width of the $\rho$, it is considered that the peak structure of $\omega$ is not significantly affected.  
     
     \subsection{Prospect of $\omega$ and $\phi$ cross section measurement}
-        As a future perspective, I will use the yields of $\omega \rightarrow\mu\mu$ and $\phi \rightarrow\mu\mu$ calculated by Figure \ref{fig:omega_yield} and Figure \ref{fig:phi_yield} to calculate the $\omega$ $\phi$. I aim at the transverse momentum spectrum of the production cross-section.
+        As a future perspective, I will use the yields of $\omega \rightarrow\mu\mu$ and $\phi \rightarrow\mu\mu$ calculated by Figure \ref{fig:omega_yield} and Figure \ref{fig:phi_yield} to calculate the $\omega$ and $\phi$. I aim at the transverse momentum spectrum of the production cross-section.
         (\ref{cross-section}) can calculate the production cross-section\cite{phi-crosssection}.
         \begin{eqnarray}
             \frac{d^2\sigma}{dy dp_T} &=& \frac{1}{\Delta y \Delta p_T}\times \frac{N(\Delta p_T,\Delta y)}{[Acc\times Eff](\Delta p_T,\Delta y)\times BR_{\phi,\omega\rightarrow\mu\mu}\times L_{int}}
