--- a/master_thesis.tex
+++ b/master_thesis.tex
@@ -48,7 +48,7 @@
   {1em}
   {}
 
-\title{Measurement of $\omega$ and $\phi$ meson production via dimuons at forward rapidity in $pp$ collisions at $\sqrt{s}=13.6$ TeV with ALICE.}
+\title{Measurement of $\omega$ and $\phi$ meson production via dimuons at forward rapidity in $pp$ collisions at $\sqrt{s}=13.6$ TeV with ALICE}
 \author{Masahiro Oida}
 \date{}
 \begin{document}
@@ -62,7 +62,7 @@
     \centering  % すべて中央揃えにする
     \vspace*{30mm} % 上部余白
 
-    {\LARGE Master's thesis} \\[20mm] % "修士論文" の部分を大きく
+    {\Large Master's thesis} \\[20mm] % "修士論文" の部分を大きく
     
     {\LARGE \textbf{Measurement of $\omega$ and $\phi$ meson production via dimuons\\ at forward rapidity in $pp$ collisions at $\sqrt{s}=13.6$ TeV \\ with ALICE}} \\[50mm] % タイトルを強調
   
