--- a/1_Introduction.tex
+++ b/1_Introduction.tex
@@ -2,12 +2,14 @@
 \section{Introduction}
     \subsection{QCD}
     \label{Intro:QCD}
-        The fundamental components of the matter around us are elementary particles. The behaviour of elementary particles, such as quarks and gluons, is described by quantum field theory. In particular, quarks and gluons possess degrees of freedom called color, the physics governing this degree of freedom is known as Quantum Chromodynamics (QCD).\@ QCD is based on an SU(3) gauge theory and describes the strong interaction. The QCD Lagrangian is expressed as follows:
+        The fundamental components of the matter around us are elementary particles. The behaviour of elementary particles, such as quarks and gluons, is described by quantum field theory. In particular, quarks and gluons possess degrees of freedom called color, the physics governing this degree of freedom is known as Quantum Chromodynamics (QCD).\@ QCD is based on an SU(3) gauge theory and describes the strong interaction. QCD Lagrangian is expressed as follows:
         \begin{eqnarray}
             \label{QCDlagrangian}
             \mathcal{L}_{QCD}=\sum_q \bar{\psi}_{q,a}\qty(i\gamma^\mu\partial_\mu-m_q)\psi_{q,a}+g_s \sum_q \bar{\psi}_{q,a}\gamma^\mu T^A_{ab}\psi_{q,b}G^A_\mu-\frac{1}{4}G^A_{\mu\nu}G^{A\mu\nu}
         \end{eqnarray}
-        $\psi_{q,a}$ and $\bar{\psi}_{q,a}$ represent the quark and antiquark fields, where $q$ denotes the flavor degree of freedom, and $a$ denotes the color degree of freedom. $\gamma^\mu$ is the gamma matrics, $m_q$ is the quark mass corresponding to each flavor, $g_s$ is the QCD coupling constant, $T^A_{ab}$ are the generator matrices, $G^A_\mu$ is the gluon field, and $G^A_{\mu\nu}$ is the gluon field tensor.
+        $\psi_{q,a}$ and $\bar{\psi}{q,a}$ represent the quark and antiquark fields, where $q$ denotes the flavor degree of freedom and $a$ denotes the color degree of freedom. The $\gamma^\mu$ are the gamma matrices, $m_q$ is the quark mass corresponding to each flavor, $g_s$ is the QCD coupling constant, $T^A{ab}$ are the generator matrices, $G^A_\mu$ is the gluon field, and $G^A_{\mu\nu}$ is the gluon field tensor.
+
+        %        $\psi_{q,a}$ and $\bar{\psi}_{q,a}$ represent the quark and antiquark fields, where $q$ denotes the flavor degree of freedom, and $a$ denotes the color degree of freedom. $\gamma^\mu$ is the gamma matrics, $m_q$ is the quark mass corresponding to each flavor, $g_s$ is QCD coupling constant, $T^A_{ab}$ are the generator matrices, $G^A_\mu$ is the gluon field, and $G^A_{\mu\nu}$ is the gluon field tensor.
 
         The first term in (\ref{QCDlagrangian}) represents the term for a free particle of mass $m$, the second term represents the interaction between quarks and gluons, and the third term represents the interaction between gluons themselves. A significant difference from Quantum Electrodynamics (QED), which describes electromagnetic interactions, is the presence of the coupling constant $\alpha_s(Q^2)$ and the self-interaction of the gluon field. In QED, the coupling constant does not depend on the energy scale. However, the coupling constant $\alpha_s(Q^2)$ that appears in QCD depends on the energy scale.
         \begin{figure}[htbp]
@@ -18,7 +20,7 @@
         \end{figure}
         Figure \ref{coupling_constant} shows how the coupling constant $\alpha_s(Q^2)$ changes with the energy scale\cite{ParticleDataGroup:2024cfk}. The coupling constant becomes small at high energy scales, corresponding to short distances. This reflects the phenomenon of asymptotic freedom, where quarks behave as free particles when they are sufficiently close to each other. On the other hand, at low energy scales corresponding to long distances, the coupling constant grows infinitely large. This represents the phenomenon of quark confinement, where quarks cannot be isolated as individual particles.
         
-        Next, we focus on gluon selfinteraction. The gluon field tensor is expressed as:
+        Next, we focus on the gluon selfinteraction. The gluon field tensor is expressed as:
         \begin{eqnarray}
         \label{eq01}
             G^A_{\mu\nu} = \partial_\mu G^A_\nu - \partial_\nu G^A_\mu + g_s f^{ABC}G^B_\mu G^C_\nu
@@ -57,14 +59,14 @@
         \end{eqnarray}  
         
         \begin{itemize}
-            \item Kinetic Term (First Term of the QCD Lagrangian)
+            \item Kinetic Term (the first term of the QCD Lagrangian)
                     \begin{eqnarray}  
                         \bar{q}\qty(i\gamma^\mu D_\mu)q &=& \bar{q}\qty(i\gamma^\mu D_\mu)\qty(P_R^2 + P_L^2)q \\  
                         &=& \bar{q} P_L \qty(i\gamma^\mu D_\mu) P_R q + \bar{q} P_R \qty(i\gamma^\mu D_\mu) P_L q \\  
                         &=& \bar{q}_R \qty(i\gamma^\mu D_\mu) q_R + \bar{q}_L \qty(i\gamma^\mu D_\mu) q_L  
                     \end{eqnarray}  
             
-            \item Mass Term (Second Term of the QCD Lagrangian)
+            \item Mass Term (the second term of the QCD Lagrangian)
                     \begin{eqnarray}  
                         \bar{q}m q &=& \bar{q} m \qty(P_R^2 + P_L^2)q \\  
                         &=& \bar{q} P_R m P_R q + \bar{q} P_L m P_L q \\  
@@ -74,18 +76,17 @@
         
         From the above, the kinetic term of the quark field can be separated into the right-handed and left-handed quark fields, thereby preserving chiral symmetry. However, the mass term mixes the right-handed and left-handed quark fields, breaking chiral symmetry. Considering the chiral limit ($m_q = 0$), the QCD Lagrangian preserves chiral symmetry.  
         
-        The quark represents the order parameter for the spontaneous breaking of chiral symmetry condensate $< \bar{q}q >$. As shown in Figure \ref{quark_condensate}\cite{Weise:1993ax}, this quantity takes a finite value in the ground state of hadrons at standard temperature and density. But, it is expected to approach $< \bar{q}q > \sim 0$ at extremely high temperatures and densities. 
+        The degree of chiral symmetry breaking is expressed as the vacuum expectation of quark condensation $< \bar{q}q >$.\@ As shown in Figure \ref{quark_condensate}\cite{Weise:1993ax}, this quantity takes a finite value in the ground state of hadrons at standard temperature and density. But, it is expected to approach $< \bar{q}q > \sim 0$ at extremely high temperatures and densities. 
         \begin{figure}[htbp]  
             \centering  
             \includegraphics[keepaspectratio, scale=0.6]{fig/1_1_quark_condensate.png}  
             \caption{Temperature and density dependence of the expected value of quark condensation}  
             \label{quark_condensate}  
         \end{figure}  
-        
         Since the vacuum expectation value of the quark condensate cannot be directly measured, as described later, various other probes are used to investigate the restoration of chiral symmetry.
     \subsection{NJL model}
     \label{NJL model}      
-        The interaction between quarks and gluons, as described in \ref{Intro:QCD}, exhibits a complex structure, making it difficult to understand various phenomena from first-principle calculations. Therefore, models are employed to describe various phenomena. One such model is the Nambu-Jona-Lasinio (NJL), an chiral effective model. Its Lagrangian is expressed as follows.
+        The interaction between quarks and gluons, as described in \ref{Intro:QCD}, exhibits a complex structure, making it difficult to understand various phenomena from first-principle calculations. Therefore, models are employed to describe various phenomena. One such model is the Nambu-Jona-Lasinio (NJL), a chiral effective model. Its Lagrangian is expressed as follows.
         \begin{eqnarray}
             \label{NJLmodel}
             \mathcal{L}=\bar{q}i\gamma \cdot \partial q -(-g)\qty[(\bar{q}q)^2+(\bar{q}i\gamma_5q)^2]
@@ -109,7 +110,7 @@
             H_{MFA}=\int \dd[3]{\bm{x}}\qty{\bar{q}_\theta (x)(-i\gamma \cdot \nabla+M)q_{\theta}(x)+\frac{m_0^2}{2}\sigma_0^2}
         \end{eqnarray}
         where $\sigma_0^2 = \sigma^2 + \pi^2$. Since $\pi$ is considered sufficiently small, we write $\sigma$ to $\sigma_0$.  
-        From this Hamiltonian, the Dirac equation for mass $M$ can be derived. Its solution is given as \ref{Msol}  
+        From this Hamiltonian, the Dirac equation for mass $M$ can be derived. Its solution is given as (\ref{Msol}). 
         \begin{eqnarray}
             \label{Msol}
             q_\theta (x)=\frac{1}{\sqrt{V}}\sum_{\bm{p},r=\pm} \sqrt{\frac{M}{E_p}}\qty{a_M(\bm{p},r)u_M(\bm{p},r)e^{-ip\cdot x}+b_M^{\dag}(\bm{p},r)v_M(\bm{p},r)e^{ip\cdot x}}
@@ -153,30 +154,29 @@
             \ket{\sigma_0} &\rightarrow&a_M(\textbf{\textit{p}},r)\ket{\sigma_0}=b_M(\textbf{\textit{p}},r)\ket{\sigma_0}=0\\
             \ket{0} &\rightarrow& a_0(\textbf{\textit{p}},r)\ket{0}=b_0(\textbf{\textit{p}},r)\ket{0}=0
         \end{eqnarray}
-        
        $a_0(\textbf{\textit{p}},r)^{\dag}$ creates an eigenstate of chirality, while $a_M(\textbf{\textit{p}},r)^{\dag}$ creates an eigenstate of helicity. Based on the vacuum definition and \eqref{Bogoliubov transformation}, acting on $\ket{0}$ produces an eigenstate of helicity but not a definite chirality eigenstate. This implies that "chiral symmetry is spontaneously broken".  
         
         Thus, the NJL model theoretically predicts vacuum phase transitions. In our universe, it is believed that quark condensation spontaneously breaks chiral symmetry, leading to hadrons acquiring significant masses.
     \subsection{Quark-Gluon Plasma}
-        When hadrons are exposed to extremely high temperatures and densities, they transition into a plasma state known as the Quark-Gluon Plasma (QGP). In the QGP state, quarks are resolved from confinement, and chiral symmetry restoration is also expected. Furthermore, it is believed that the universe was in a QGP state immediately following the Big Bang. On the QCD phase diagram, which represents the phase structure of quarks and gluons, the QGP phase appears as shown in Figure \ref{QCD_Phase_Diagram}.    
+        When hadrons are exposed to extremely high temperatures and densities, they transition into a plasma state known as the Quark-Gluon Plasma (QGP). In the QGP, quarks are resolved from confinement, and chiral symmetry restoration is also expected. Furthermore, it is believed that the universe was in a QGP state immediately following the Big Bang. On the QCD phase diagram, which represents the phase structure of quarks and gluons, the QGP phase appears as shown in Figure \ref{QCD_Phase_Diagram}.    
         \begin{figure}[hbtp]
             \centering
             \includegraphics[keepaspectratio, scale=0.6]{fig/1_4_QCDPhaseDiagram.png}
             \caption{QCD Phase Diagram\cite{QCDPhaseDiagram}}
             \label{QCD_Phase_Diagram}
         \end{figure}
-        The QGP phase can be observed in high-temperature regions in both high net baryon density and low net baryon density areas. Two types of phase transitions are related in the transition to the QGP phase. The first is the chiral phase transition. The second is the deconfinement-confinement phase transition.  
+        The QGP phase can be observed in high-temperature regions in both high net baryon density and low net baryon density areas. Two types of phase transitions are involved in the transition to the QGP phase. The first is the chiral phase transition. The second is the deconfinement-confinement phase transition.  
         
         The chiral phase transition is the spontaneous breaking of chiral symmetry as the vacuum undergoes a phase transition, allowing quarks to acquire a substantial effective mass. In other words, the chiral phase transition is deeply related to the mass acquisition of hadrons. 
         The deconfinement-\-confinement phase transition pertains to the con\-finement of quarks. 
         In the hadronic ground state, quarks are confined by color interaction.
         However, in the QGP state, quarks are resolved from confinement and transition into a plasma state. 
         This is the deconfinement-\-confinement phase transition. 
-        While these transitions are believed to occur at approximately a similar critical temperature, this relationship is not unsolved, and research is ongoing.
+        While these transitions are believed to occur at approximately a similar critical temperature, this relationship is not fully understood, and research is ongoing.
         
         % Additionally, an intriguing aspect of the QCD phase diagram is the nature of phase transition orders. At zero baryon number density, lattice QCD calculations have been extensively performed, revealing that the transition is a crossover, i.e., a continuous phase transition. On the other hand, in regions with high baryon number density, lattice QCD calculations face challenges due to the sign problem, making it difficult to predict the nature of the transition. Consequently, effective models play a crucial role. Analyses based on effective models suggest that a first-order phase transition is expected. Accordingly, research exploring the locations of phase transitions on the phase diagram remains highly active.  
     \subsection{Heaby Ion collision}
-        The existence of QGP, which are ultrahigh-temperature or dense materials, has been confirmed by heavy-ion collision experiments. Figure  \ref{Intro:HIC:space_time_evaluation_of_HIC} shows the time evolution proceeds in the following.
+        The existence of the QGP, which is ultrahigh-temperature or dense matter, has been confirmed by heavy-ion collision experiments. Figure  \ref{Intro:HIC:space_time_evaluation_of_HIC} shows the time evolution proceeds in the following.
         \begin{figure}[hbtp]
             \centering
             \includegraphics[keepaspectratio, scale=0.4]{fig/1_5_QGP_Evol.png}
@@ -189,44 +189,43 @@
             \item Hadronization
             \item Kinetic Freeze-out
         \end{enumerate}
-        In the initial stage of the collision, partons from the nucleons undergo elastic and deep inelastic scatterings to reach thermalisation. During this initial collision, phenomena such as jet production and the pair production of heavy quarks occur. Once the material generated in the collision region reaches thermal equilibrium, the system transitions into the QGP state.  
+        In the initial stage of the collision, partons from the nucleons undergo elastic and deep inelastic scatterings to reach thermalisation. During this initial collision, phenomena such as jet production and the pair production of heavy quarks occur. Once the matter generated in the collision region reaches thermal equilibrium, the system transitions into the QGP state.  
         
         In the QGP state, photons and lepton pairs originating from the thermal radiation of high-temperature matter are generated. Jets interact with the QGP and lose energy, resulting in jet quenching, while heavy quarks undergo deconfinement due to the color Debye screening. Subsequently, as the QGP cools, hadronisation occurs, leading to chemical freeze-out.  
                
-        Chemical freeze-out refers to stopping changes in particle species due to deeply inelastic scatterings among particles. However, elastic scatterings between hadrons continue, and momentum exchange among particles. Later, kinetic freeze-out occurs, fixing the momenta and other properties of the particles. The particles finally detected are those that remain after the kinetic freeze-out. Thus, QGP is formed during the temporal evolution of heavy-ion collisions, and its lifetime is extremely short.
+        Chemical freeze-out refers to the cessation of changes in particle species due to deep inelastic scatterings among particles. However, elastic scatterings between hadrons continue, allowing momentum exchange among particles. Later, kinetic freeze-out occurs, fixing the momenta and other properties of the particles. The particles finally detected are those that remain after the kinetic freeze-out. Thus, the QGP is formed during the temporal evolution of heavy-ion collisions, and its lifetime is extremely short.
         
         % Here, since partons strongly interact with the QGP, only the final state of heavy-ion collisions is observed. However, leptons and photons do not undergo strong interactions, so their measurements reflect the integration over the entire temporal evolution.
         
         % Some evidence of QGP includes jet quenching and strong elliptic flow. Jet quenching refers to the phenomenon where high-energy partons produced during the initial stage of high-energy collisions generate numerous high-momentum particles along their flight direction. However, due to their interactions with the QGP, the jets are quenched. High-energy partons passing through the medium lose energy, suppressing the jet phenomenon. Additionally, strong elliptic flow occurs when QGP generated during heavy-ion collisions exhibits a distinct collective flow depending on its density and temperature.
-        The QGP generated in heavy-ion collisions has its density and temperature determined by the collision energy. High-density QGP regions are realised at collision energies of $\sqrt{s_{NN}} \lesssim 10$ [GeV].\@ At these energies, the colliding particles stop at the collision point. They create a high-density state where kinetic energy is converted directly into heat, increasing the temperature.  
+        The QGP generated in heavy-ion collisions has its density and temperature determined by the collision energy. High-density QGP regions are realised at collision energies of $\sqrt{s_{NN}} \lesssim 10$ GeV.\@ At these energies, the colliding particles stop at the collision point. Creating a high-density state where kinetic energy is converted directly into heat, increasing the temperature.  
   
-        On the other hand, high temperature, low net baryon density regions are achieved at collision energies of $\sqrt{s_{NN}} \gtrsim 100$ [GeV].\@ In this energy regime, the colliding particles do not stop but pass through each other, producing many pair creations. As a result, the baryon number density does not become large relative to the temperature. However, a high energy density region leads to the creation of high-temperature matter near the collision point.  
+        On the other hand, high temperature and low net baryon density regions are achieved at collision energies of $\sqrt{s_{NN}} \gtrsim 100$ GeV.\@ In this energy regime, the colliding particles do not stop but pass through each other, producing numerous particle-antiparticle pairs. As a result, the baryon number density does not become large relative to the temperature. However, the high energy density in this region leads to the creation of high-temperature matter near the collision point.  
                
-        In the ALICE experiment, LHC Run 3 operations began in 2022, initiating Pb-Pb collision measurements at $\sqrt{s_{NN}} = 5.36$ TeV.\@ This collision energy produces QGP in the ultrahigh temperature, low net baryon density region. Moreover, compared to the QGP generated at $\sqrt{s_{NN}} = 200$ GeV at RHIC, the higher collision energy at LHC enables the measurement of a larger QGP than ever before.
+        In the ALICE experiment, LHC Run 3 operations began in 2022, initiating Pb-Pb collision measurements at $\sqrt{s_{NN}} = 5.36$ TeV.\@ This collision energy produces QGP in the ultrahigh-temperature, low net baryon density region. Moreover, compared to the QGP generated at $\sqrt{s_{NN}} = 200$ GeV at RHIC, the higher collision energy at the LHC enables the measurement of a larger QGP than ever before.
     \subsection{Dilepton Measurement}
-        Dilepton measurement is a good probe for investigating the time evolution of heavy-ion collisions. Leptons do not interact with strong interactions, making them less affected by the QGP.\@ This characteristic allows for the measurement of a distribution that sums up dileptons from all stages of heavy-ion collisions. The sources of dilepton production are as Figure \ref{Intro:Dilepton:dilepton_source}.
+        Dilepton measurement is a sensitive probe for investigating the time evolution of heavy-ion collisions. Since leptons do not participate in strong interactions, they are minimally affected by the QGP.\@ This property allows for the measurement of a dilepton distribution that integrates contributions from all stages of heavy-ion collisions. The sources of dilepton production are illustrated in Figure \ref{Intro:Dilepton:dilepton_source}.
         \begin{figure}[hbtp]
             \centering
             \includegraphics[keepaspectratio, scale=0.3]{fig/1_5_dilepton_source.png}
             \caption{Dilepton source\cite{Geurts:2022xmk}}
             \label{Intro:Dilepton:dilepton_source}
         \end{figure}
-        
         \begin{itemize}
             \item Primordial dileptons (from \(q\bar{q}\) annihilation)
             \item Thermal dileptons
             \item Dileptons from hadron decays
         \end{itemize} 
-        The dilepton mass regions are associated with the time evolution of heavy ion collisions respectively.
+        The dilepton mass regions correspond to different stages in the time evolution of heavy-ion collisions.
         \begin{figure}[hbtp]
             \centering
             \includegraphics[keepaspectratio, scale=0.3]{fig/1_6_expected_dileptonMass.png}
             \caption{Expected mass spectrum from dileptons\cite{Rapp:1999ej}}
             \label{Intro:Dilepton:dilepton_mass}
         \end{figure}      
-        In the High-Mass Region, primordial dileptons (Drell-Yan) constitute the continuum component of the mass distribution. It is related to the initial state of the collision. In the Intermediate-Mass Region, thermal dileptons originating from the QGP and continuum components such as open-charm and open-beauty are observed. 
+        In the High-Mass Region, primordial dileptons from the Drell-Yan process constitute the continuum component of the mass distribution, reflecting the initial state of the collision. In the Intermediate-Mass Region, thermal dileptons originating from the QGP, as well as continuum components such as open-charm and open-beauty decays, are observed. 
         
-        Finally, in the Low-Mass Region, the Dilepton distribution predominantly derives from light meson decays from the hadronic gas. Most dileptons from hadron decays have longer lifetimes than the QGP.\@ So these mesons observed in this region are mostly from the hadron gas. However, light vector mesons $(\rho, \omega, \phi)$ have extremely short lifetimes. The effect of the QGP has been suggested.\@
+        Finally, in the Low-Mass Region, the dilepton distribution is predominantly derived from light meson decays in the hadronic gas. Most dileptons from hadron decays originate from mesons with relatively long lifetimes, meaning they primarily reflect the hadronic gas phase. However, light vector mesons $(\rho, \omega, \phi)$ have extremely short lifetimes, making them sensitive to the QGP effects.\@
     \subsection{Search for chiral symmetry restoration in QGP}
         \begin{figure}[hbtp]
             \centering
@@ -234,12 +233,12 @@
             \caption{Low mass vector meson decay in QGP}
             \label{Intro:Search_for_CSR:Low_mass_vector_meson_decay_in_QGP}
         \end{figure}     
-        In the QGP, an ultra-high temperature and high-density state are expected to be realised, leading to $ < \bar{q}q > \sim 0 $ and restoring chiral symmetry. Light vector mesons $(\rho, \omega, \phi)$ serve as probes for the masses of hadrons in the QGP.\@ These particles have short lifetimes and decay channels into dileptons. As shown in Figure \ref{Intro:Search_for_CSR:Low_mass_vector_meson_decay_in_QGP}, their short lifetimes make it possible for them to decay within the QGP, which would otherwise immediately hadronise. Additionally, since they decay exclusively into dileptons, which do not undergo strong interactions with the QGP, the masses of hadrons within the QGP can be measured.  
+        In the QGP, an ultra-high temperature and high-density state is expected to be realised, leading to $ < \bar{q}q > \sim 0 $ and restoring chiral symmetry. Light vector mesons $(\rho, \omega, \phi)$ serve as probes for the masses of hadrons in the QGP.\@ These particles have short lifetimes and decay channels into dileptons. As shown in Figure \ref{Intro:Search_for_CSR:Low_mass_vector_meson_decay_in_QGP}, their short lifetimes make it possible for them to decay within the QGP, before hadronization occurs. Additionally, since they decay into only dileptons, which do not interact via the strong force with the QGP, the masses of hadrons within the QGP can be measured.  
         
-        In past experiments, the restoration of chiral symmetry was investigated using dileptons. In the SPS-NA60 experiment, the excess of muon pairs in the low-mass region was reported. However, the excess could also be explained by $\pi + \pi \rightarrow \rho \rightarrow \pi \pi$; thus, it did not serve as definitive evidence of chiral symmetry restoration\cite{NA60}.  
+        In past experiments, dilepton measurements have been used to investigate chiral symmetry restoration. In the SPS-NA60 experiment, the excess of muon pairs in the low-mass region was reported. However, the excess could also be explained by the process $\pi \pi \rightarrow \rho \rightarrow \pi \pi$; thus, it did not serve as definitive evidence of chiral symmetry restoration\cite{NA60}.  
         
-        Additionally, in the electron pair measurements during ALICE Run 2 $\sqrt{s_{NN}} = 5.02$ TeV PbPb collisions, contributions from open-charm and open-beauty were estimated along with the vacuum dilepton distribution excluding $\rho$, and an excess of electron pairs was reported. The excess was explained as thermal dileptons from the QGP within the error range demonstrated\cite{ALICE:2023jef}. 
+        Additionally, in the electron pair measurements during ALICE Run 2 $\sqrt{s_{NN}} = 5.02$ TeV lead-lead collisions, contributions from open-charm and open-beauty were estimated along with the vacuum dilepton distribution excluding $\rho$, and an excess of electron pairs was reported. The excess was explained as thermal dileptons from the QGP, consistent with the error range\cite{ALICE:2023jef}. 
     \subsection{Analysis of pp collision data as a baseline}
-    This paper presents the analysis results of proton-proton collision events. The particles generated in proton-proton collisions are produced from the vacuum. Measurements of collision events where QGP is not produced serve as a baseline for comparison with events where QGP is generated. The quality of track reconstruction is still insufficient, and the muon pair analysis is also incomplete. Furthermore, the quality of muon tracks in heavy-ion collisions is more challenging than in proton-proton collisions due to the large number of particles generated in each event.  
+    This paper presents the analysis results of proton-proton collision events. The particles generated in proton-proton collisions are produced from the vacuum. Measurements of such events, where no QGP is formed, serve as a baseline for comparison with events where QGP is generated. Currently, the quality of track reconstruction remains insufficient, and the muon pair analysis is incomplete. Moreover, muon track reconstruction in heavy-ion collisions is even more challenging than in proton-proton collisions due to the significantly larger number of particles produced per event.  
 
-    The purpose of this study is to provide an analysis as a baseline for future studies of $\sqrt{s_{NN}} = 5.02$ PbPb collisions, where QGP is expected to be generated and to improve the quality of muon tracks in ALICE Run 3 $\sqrt{s_{NN}} = 13.6$ TeV pp collisions.
+    The purpose of this study is to provide an analysis as a baseline for future studies of $\sqrt{s_{NN}} = 5.02$ TeV lead-lead collisions, where QGP is expected to be generated and to improve the quality of muon tracks in ALICE Run 3 $\sqrt{s} = 13.6$ TeV proton-proton collisions.
